# link_hh.ru

./: .gitignore  README.md  babel.cfg  messages.pot  pyproject.toml  setup.cfg
.github/workflows/: main.yml
backend/: __init__.py  cli.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 07f3b170e8f4_.py
backend/apps/: router.py
backend/apps/auth/: email.py  messages.py  oauth.py  router.py
backend/apps/auth/api/: __init__.py  v1.py
backend/apps/auth/schemas/: __init__.py  tokens.py  users.py
backend/apps/auth/services/: auth.py
backend/apps/auth/templates/auth/: reset_password.html  verification.html
backend/apps/users/: router.py
backend/apps/users/api/: __init__.py
backend/apps/users/cruds/: __init__.py  users.py
backend/apps/users/models/: __init__.py  users.py
backend/apps/users/schemas/: __init__.py  users.py
backend/common/: babel.py  context.py  email.py  logging.py  models.py  schemas.py  settings.py  telemetry.py
backend/common/auth/: cookies.py  decoders.py  messages.py  schemas.py  service.py  session.py  user.py
backend/common/exceptions/: errors.py  exception_handlers.py
backend/common/resources/: constants.py  strings.py
backend/common/responce/: __init__.py  base.py  helpers.py  messages.py  schemas.py
backend/common/security/: hash_utils.py  jwt_utils.py
backend/core/: config.py  path_conf.py  registrar.py
backend/core/settings/: app.py  development.py  production.py
backend/database/: db.py  redis.py
backend/middlewares/: csrf.py
backend/utils/: dynamic_import.py  timezone.py  trace_id.py  urls.py
lang/en/LC_MESSAGES/: messages.mo  messages.po
lang/ru/LC_MESSAGES/: messages.mo  messages.po
stubs/fastapi_babel/: __init__.pyi
